@@ -12,6 +12,8 @@ Changes to Version 2.3-0
   
   o Added Welch F-test option to one-way ANOVA dialog.
   
+  o Added compare coefficients dialog.
+  
   o The Shapiro-Wilk test for normality dialog is replaced by a more general normality-tests dialog.
   
   o Dialogs for plotting continuous distributions now allow the user to specify regions to fill.
